# doc-2-speech

./: .claudeignore  .env.template  .gitignore  1-extract-text.py  2-refine-text.py  3-text-to-speech.py  AGENTS.md  README.md  claude.md  main.py  plan.md  pompt.md  pyproject.toml  run.zsh  test_flet.py
app/: README.md  bun.lockb  package.json
app/src/: App.vue  HomePage.vue  OllamaInstructions.vue  RunningPage.vue  style.css  utils.ts
app/src-python/: main.py
app/src-tauri/: tauri.conf.json
src/: main.py  pipeline.py
