[project]
name = "pdf-to-speech"
version = "0.1.0"
description = ""
readme = "README.md"
requires-python = ">=3.13"
authors = [{ name = "Dustin Michels" }]
dependencies = [
    "docling>=2.75.0",
    "flet>=0.81.0",
    "kokoro-onnx>=0.5.0",
    "ollama>=0.6.1",
    "soundfile>=0.13.1",
]

[dependency-groups]
dev = ["flet-cli>=0.81.0", "flet-desktop>=0.81.0", "flet-web>=0.81.0"]

[tool.flet]
org = "com.mycompany"
product = "pdf-to-speech"
company = "Flet"
copyright = "Copyright (C) 2023-2026 by Flet"

[tool.flet.app]
path = "src"
