[project]
name = "pdf-to-speech"
version = "0.1.0"
description = ""
readme = "README.md"
requires-python = ">=3.13"
authors = [{ name = "Dustin Michels" }]
dependencies = [
    "docling>=2.75.0",
    "fastapi[standard]>=0.133.0",
    "kokoro-onnx>=0.5.0",
    "ollama>=0.6.1",
    "soundfile>=0.13.1",
    "uvicorn[standard]>=0.41.0",
]
